<resources>
    <string name="app_name">hitalk</string>
    <string name="back">返回</string>
    <string name="login">登陆</string>
    <string name="registerUser">注册用户</string>
    <string name="login_issue">登陆问题</string>
    <string name="login_warn">用户名或密码不能为空</string>
    <string name="phone_number">手机号码</string>
    <string name="phoneTips">请输入手机号</string>
    <string name="verify_code">验证码</string>
    <string name="send_code">发送验证码</string>
    <string name="phone_or_psw_error">手机或者密码错误</string>
    <string name="phone_number_is_null">手机号不能为空</string>
    <string name="illegal_phone_number">非法手机号</string>
    <string name="password_is_null">密码不能为空</string>
    <string name="password_cannot_contain_spaces">密码不能包含空格</string>
    <string name="userName">用户名</string>
    <string name="password">密码</string>
    <string name="passwordTips">请输入密码</string>
    <string name="passwordRegTips">设置密码</string>
    <string name="passwordRegSubTips">(5～10位数字、字母组成)</string>
    <string name="hiServiceProtocal">Hi服务使用协议</string>
    <string name="register">注册</string>
    <string name="registerSucceed">注册成功</string>
    <string name="registerFailed">注册失败:</string>
    <string name="code_is_null">验证码为空</string>
    <string name="name_is_null">昵称不能为空</string>
    <string name="name_contain_spaces">昵称不能包含空格</string>

    <!-- tab tips -->
    <string name="tab_hi">HI聊</string>
    <string name="tab_message">我的消息</string>
    <string name="tab_address">同学录</string>
    <string name="tab_blackboard">黑板报</string>
    <string name="tab_me">我的</string>
    <string name="welTips">欢迎进入HI聊</string>
    <string name="fillInfoTips">完善信息</string>
    <string name="nicknameTips">请输入昵称</string>
    <string name="collegeTips">请输入大学名称</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="interestTips">兴趣爱好</string>
    <string name="complete">完成</string>
    <string name="nicknameNull">昵称不能为空</string>
    <string name="nicknameRepeat">该昵称已经被使用</string>
    <string name="nickHasSpace">昵称不能含有空格</string>
    <string name="unknown">未知错误</string>
    <string name="interestNull">兴趣爱好不能为空</string>
    <string name="collegeNull">学校不能为空</string>
    <string name="interestFull">暂时只支持4个</string>
    <string name="send_code_failed">验证码发送失败</string>
    <string name="code_is_wrong">验证码错误</string>
    <string name="send_code_success">验证码发送成功</string>
    <string name="college_illegal">学校名称不合法</string>
    <string name="onlineNumber">%1$d在线</string>
    <string name="unspport_message_type">不支持的消息类型</string>
    <string name="not_fill_info_warn">请完善信息</string>
    <string name="internet_not_connect_warn">请检查网络设置</string>
    <string name="join_square_failed">加入聊天室失败</string>
    <string name="square_not_create">聊天室暂未创建</string>
    <string name="topic_conversation_title">话题聊</string>
    <string name="commentNull">评论不能为空...</string>
    <string name="share_url">分享了一个链接...</string>
    <string name="publish">出版</string>
    <string name="publishBn">出版报</string>
    <string name="publishSome">出版点什么...</string>
    <string name="bnContentNull">发布内容不能为空</string>
    <string name="publish_failed">发布失败</string>
    <string name="myBn">我的板报</string>
    <string name="interestCv">我关注的聊天室</string>
    <string name="createdCv">我创建的聊天室</string>
    <string name="myPhotos">我的相册</string>
    <string name="accountManager">账号管理</string>
    <string name="infoManager">资料管理</string>
    <string name="notifyInfo">通知</string>
    <string name="about">关于</string>
    <string name="atme">\@我的</string>
    <string name="bookMsg">订阅消息</string>
    <string name="conditionSearch">按条件查找</string>
    <string name="alumnipage">同学录</string>
    <string name="friends">好友录</string>
    <string name="groups">群组</string>
    <string name="nearbyp">查看附近的人</string>
    <string name="newf">新的朋友</string>
    <string name="makefriend">加好友</string>
    <string name="hotRecommand">热门推荐</string>
    <string name="hot_demo_1">310英语顽皮嗨俱乐部成了</string>
    <string name="hot_demo_2">让英语成为生活，让你沟通畅通无助</string>
    <string name="hot">热</string>
    <string name="topics">话题大杂烩</string>
    <string name="chinajoy">2016年度chinajoy</string>
    <string name="chinajoyvr">今年看点围绕VR</string>
    <string name="start_group_chat">发起群聊</string>
    <string name="title_select_student">选择同学</string>
    <string name="confirm">确定</string>


    <string name="message_shorthand_audio">[语音]</string>
    <string name="message_shorthand_image">[图片]</string>
    <string name="message_shorthand_location">[位置]</string>
    <string name="message_shorthand_unknown">[未知]</string>
    <string name="title_setting">设置</string>
    <string name="login_out">退出登陆</string>
    <string name="contact_alreadyCreateAddRequest">请求已发送</string>
    <string name="request_sending">正在发送请求</string>
    <string name="request_send">请求发送成功</string>
    <string name="wait_for_verfiy">待验证</string>
    <string name="push_add_request">您有新的好友申请</string>
    <string name="title_new_friend">新的朋友</string>
    <string name="accept">接受</string>
    <string name="accepted">已添加</string>
    <string name="preIntroduce">我是</string>
    <string name="trying">加载中</string>
    <string name="message_when_agree_request">我们已经是好友了，来聊天吧</string>
    <string name="add_already">已添加</string>
    <string name="title_add_friend">添加朋友</string>
    <string name="qr_identity_description">扫一扫上面的二维码,加我HI聊</string>
    <string name="generate_qr_failed">二维码生成失败</string>
    <string name="mobileNumber">手机号</string>
    <string name="mobile_HitalkNumber">手机号/HI聊号</string>
    <string name="scanqr">扫一扫</string>
    <string name="scanqr_des">扫描二维码名片</string>
    <string name="phonecontacts">手机联系人</string>
    <string name="phonecontacts_des">添加通讯录中的朋友</string>
    <string name="title_scan_qr">二维码/条码</string>
    <string name="open_camera_error">打开相机出错</string>
    <string name="scan_qr_tips">将二维码放入框内，即可自动扫描</string>
    <string name="title_friend_info">详细资料</string>
    <string name="hitalkPrefix">HI聊号: </string>
    <string name="setupNotes">设置与备注</string>
    <string name="collegeTitle">学校:</string>
    <string name="signTitle">个性签名:</string>
    <string name="sinature">签名</string>
    <string name="wrong_search_type">错误的搜索码</string>
    <string name="searcg_hint">Search</string>
    <string name="user_not_found">用户没有找到</string>
    <string name="blackboard">黑板报</string>
    <string name="sendMessage">发送消息</string>
    <string name="open_chat_room_failed">对话打开失败</string>
    <string name="create_chat_room_failed">对话创建失败</string>
    <string name="message_fetch_failed_warn">消息获取失败，请重新尝试</string>
    <string name="not_friend_warn">对方还不是好友</string>
    <string name="friends_fetch_error">好友列表获取失败</string>
    <string name="select_student_warn">请至少选择一位朋友</string>
    <string name="comment_function">该功能已经被注释,可以直接跳过</string>
    <string name="CQYD_university">重庆邮电大学</string>
</resources>
